--- a/AutomateWarehouse/Pages/Products.razor
+++ b/AutomateWarehouse/Pages/Products.razor
@@ -43,46 +43,46 @@
                 </div>
             </EditForm>
         </div>
-        @if (editProduct) 
+        @if (editProduct)
         {
-        <div class="col-5.5 bg-light m-2 justify-content-start">
-            <EditForm Model="@updateProduct" OnValidSubmit="(() => EditProduct())">
-                <DataAnnotationsValidator />
-                <ValidationSummary />
-                <div class="p-3 mb-3 bg-secondary text-white text-center">
-                    Edit Product
-                </div>
-                <div class="p-3 mb-3 bg-secondary text-white text-center">
-                    <div class="form-group ">
-                        <label for="name">Product name </label>
-                        <input @bind-value="@updateProduct.Name" type="text" />
+            <div class="col-5.5 bg-light m-2 justify-content-start">
+                <EditForm Model="@updateProduct" OnValidSubmit="(() => EditProduct())">
+                    <DataAnnotationsValidator />
+                    <ValidationSummary />
+                    <div class="p-3 mb-3 bg-secondary text-white text-center">
+                        Edit Product
                     </div>
-                    <div class="form-group ">
-                        <label for="description">
-                            Description
-                        </label>
-                        <input id="name" @bind-value="@updateProduct.Description" type="text" />
+                    <div class="p-3 mb-3 bg-secondary text-white text-center">
+                        <div class="form-group ">
+                            <label for="name">Product name </label>
+                            <input @bind-value="@updateProduct.Name" type="text" />
+                        </div>
+                        <div class="form-group ">
+                            <label for="description">
+                                Description
+                            </label>
+                            <input id="name" @bind-value="@updateProduct.Description" type="text" />
+                        </div>
+                        <div class="form-group ">
+                            <label for="price">
+                                Price
+                            </label>
+                            <input id="name" @bind-value="@updateProduct.Price" type="number" />
+                        </div>
+                        <div class="form-group ">
+                            <label for="stock">
+                                Stock
+                            </label>
+                            <input id="name" @bind-value="@updateProduct.Stock" type="number" />
+                        </div>
+                        <button class="btn btn-info" type="submit">
+                            Update Product
+                        </button>
                     </div>
-                    <div class="form-group ">
-                        <label for="price">
-                            Price
-                        </label>
-                        <input id="name" @bind-value="@updateProduct.Price" type="number" />
-                    </div>
-                    <div class="form-group ">
-                        <label for="stock">
-                            Stock
-                        </label>
-                        <input id="name" @bind-value="@updateProduct.Stock" type="number" />
-                    </div>
-                    <button class="btn btn-info" type="submit">
-                        Update Product
-                    </button>
-                </div>
-            </EditForm>
-        </div>
+                </EditForm>
+            </div>
         }
-    @*<div><label visible="Mod(RoundDown(Timer1.Value/5000,0),2)=1" >Edit complete</label></div>*@
+        @*<div><label visible="Mod(RoundDown(Timer1.Value/5000,0),2)=1" >Edit complete</label></div>*@
     </div>
     <div>
         <select type="text" id="dept" class="form-control select-picker"
@@ -120,7 +120,15 @@
                         <td>@prod.Description</td>
                         <td>@prod.Price</td>
                         <td>@prod.Stock</td>
-                        <td>@prod.RestockingDate.ToShortDateString()</td>
+                        @if (prod.RestockingDate == default)
+                        {
+                            <td>n/a</td>
+                        }
+                        else
+                        {
+                            <td>@prod.RestockingDate.ToShortDateString()</td>
+
+                        }
                         <td><button class="btn btn-info" @onclick="(() => SetProductForUpdate( prod ))">Edit</button></td>
                         <td><button class="btn btn-danger" @onclick="(() => DeleteProduct(prod))">Delete</button></td>
 
