Fattar inte varför det blev en ny push

--- a/AutomateWarehouse/Pages/Orders.razor
+++ b/AutomateWarehouse/Pages/Orders.razor
@@ -254,7 +254,7 @@
     Order newOrder = new Order();
     Order updateOrder = new Order();
     Order addProductToOrder = new Order();
-    bool checkedValue = false;
+    //bool checkedValue = false;
 
 
     /// <summary>
