--- a/AutomateWarehouse/Pages/Orders.razor
+++ b/AutomateWarehouse/Pages/Orders.razor
@@ -18,7 +18,6 @@
                 <DataAnnotationsValidator />  
                 <ValidationSummary />
                 <div class="form-group">
-                    @*Binder respektive värde nedanför till objektet updateOrder*@
                     <label for="ord">Pick customer</label>
                     <select type="type" id="ord" class="form-control select-picker" @bind="@newOrder.CustomerId">
                         @foreach (var cust in customers)
@@ -137,55 +136,73 @@
             {
                 @foreach (var order in orders)
                 {
-                    <tr>
-                        <td>@order.Id</td>
-                        <td>@order.CustomerId</td>
-                        <td>@order.OrderDate</td>
-                        <td>@order.DeliveryAddress</td>
-                        <td>
-                            @if (order.PaymentCompleted == true)
-                            {
-                                <p>Paid</p>
-                            }
-                            else
-                            {
-                                <p>Not paid</p>
-                            }
-                        </td>
-                        <td>
-                            @if (order.Dispatched == true)
-                            {
-                                <p>Dispatched</p>
-                            }
-                            else
-                            {
-                                <p>Not dispatched</p>
-                            }
-                        </td>
-                        <td><button class="btn btn-info" @onclick="(() => SetOrderForAddingProduct (order))">Add</button></td>
-                        <td><button class="btn btn-info" @onclick="(() => ShowAllOrderLines(order))">Show</button></td>
-                        <td><button class="btn btn-info" @onclick="(() => SetOrderForEdit (order))">Edit</button></td>
+            <tr>
+                <td>@order.Id</td>
+                <td>@order.CustomerId</td>
+                <td>@order.OrderDate</td>
+                <td>@order.DeliveryAddress</td>
+                <td>
+                    @if (order.PaymentCompleted == true)
+                    {
+                        <p>Paid</p>
+                    }
+                    else
+                    {
+                        <p>Not paid</p>
+                    }
+                </td>
+                <td>
+                    @if (order.Dispatched == true)
+                    {
+                        <p>Dispatched</p>
+                    }
+                    else
+                    {
+                        <p>Not dispatched</p>
+                    }
+                </td>
+                <td>
+                    @if (order.Dispatched == true)
+                    {
+                        <p>n/a</p>
+                    }
+                    else
+                    {
+                        <button class="btn btn-info" @onclick="(() => SetOrderForAddingProduct (order))">Add</button>
+                    }
+                </td>
+                <td><button class="btn btn-info" @onclick="(() => ShowAllOrderLines(order))">Show</button></td>
+                <td>
+                    @if (order.Dispatched == true)
+                    {
+                        <p>n/a</p>
+                    }
+                    else
+                    {
+                        <button class="btn btn-info" @onclick="(() => SetOrderForEdit (order))">Edit</button>
+                    }
+                </td>
 
-                        <td>
-                            @if (!order.PaymentCompleted)
-                            {
-                                <input type="button" name="PayButton" class="btn btn-success" id="PayButton" value="Pay" @onclick="(() => PayOrderAsync(order))" />
-                            }
-                            else
-                            {
-                                <input type="button" name="UndoPayButton" class="btn btn-danger" id="UndoPayButton" value="UndoPay" @onclick="(() => UndoPayment(order))" />
-                            }
-                        </td>
-                    </tr>
+                <td>
+                    @if (!order.PaymentCompleted)
+                    {
+                        <input type="button" name="PayButton" class="btn btn-success" id="PayButton" value="Pay" @onclick="(() => PayOrderAsync(order))" />
+                    }
+                    else
+                    {
+                        <input type="button" name="UndoPayButton" class="btn btn-danger" id="UndoPayButton" value="UndoPay" @onclick="(() => UndoPayment(order))" />
+                    }
+                </td>
+            </tr>
 
                     <tr>
                         @if (orderLines != null)
                         {
                             @if (orderLines.Any() && currentOrder.Id == order.Id)
                             {
-                                
+
                                 <td colspan="10">
-                                    
+
                                     @foreach (var orderLine in orderLines)
                                     {
 
@@ -193,34 +210,34 @@
 
                                             @if (order.Id == orderLine.OrderId)
                                             {
-                                               
-                                                    <thead class="thead-light margin-0 padding-0">
+
+                                                <thead class="thead-light margin-0 padding-0">
+                                                    <tr>
+                                                        <th>Order line Id</th>
+                                                        <th>Product Id</th>
+                                                        <th>Product name</th>
+                                                        <th>Quantity</th>
+                                                        <th>Order Id</th>
+                                                        <th>Customer name</th>
+                                                    </tr>
+                                                </thead>
+
+                                                <tbody class="margin-0 padding-0">
+                                                    @foreach (var ol in orderLines)
+                                                    {
                                                         <tr>
-                                                            <th>Order line Id</th>
-                                                            <th>Product Id</th>
-                                                            <th>Product name</th>
-                                                            <th>Quantity</th>
-                                                            <th>Order Id</th>
-                                                            <th>Customer name</th>
+                                                            <td>@ol.Id</td>
+                                                            <td>@ol.ProductId</td>
+                                                            <td>@ol.Product.Name</td>
+                                                            <td>@ol.Quantity</td>
+                                                            <td>@ol.OrderId</td>
+                                                            <td>@ol.Order.Customer.Name</td>
                                                         </tr>
-                                                    </thead>
-                                                
-                                        <tbody class="margin-0 padding-0">
-                                            @foreach (var ol in orderLines)
-                                             {
-                                                <tr>
-                                                    <td>@ol.Id</td>
-                                                    <td>@ol.ProductId</td>
-                                                    <td>@ol.Product.Name</td>
-                                                    <td>@ol.Quantity</td>
-                                                    <td>@ol.OrderId</td>
-                                                    <td>@ol.Order.Customer.Name</td>
-                                                </tr>
-                                                }
-                                        </tbody>
+                                                    }
+                                                </tbody>
                                             }
                                         </table>
-                                        
+
                                         break;
                                     }
                                 </td>
@@ -254,8 +271,6 @@
     Order newOrder = new Order();
     Order updateOrder = new Order();
     Order addProductToOrder = new Order();
-    //bool checkedValue = false;
-
 
     /// <summary>
     /// Initially sets all lists by fetching all data from Products, Customers and Orders tables from DB.
