Added RestockDate.cs and fixed Process all orders

--- a/AutomateWarehouse/Pages/CustomerPage.razor
+++ b/AutomateWarehouse/Pages/CustomerPage.razor
@@ -281,7 +281,7 @@ else
       NewCustomer = new Customer();
       await UpdateGUI();
     }
-    catch (Exception ex)
+    catch (Exception)
     {
       loadFailed = true;
     }
