--- a/AutomateWarehouse/Pages/Products.razor
+++ b/AutomateWarehouse/Pages/Products.razor
@@ -29,7 +29,7 @@
                         <label for="price">
                             Price
                         </label>
-                        <input @bind-value="@newProduct.Price" type="number" />
+                        <input @bind-value="@newProduct.Price" type="number" step="any"/>
                     </div>
                     <div class="form-group ">
                         <label for="stock">
