--- a/AutomateWarehouse/Pages/Products.razor
+++ b/AutomateWarehouse/Pages/Products.razor
@@ -67,7 +67,7 @@
                             <label for="price">
                                 Price
                             </label>
-                            <input id="name" @bind-value="@updateProduct.Price" type="number" />
+                            <input id="name" @bind-value="@updateProduct.Price" type="number" step="any" />
                         </div>
                         <div class="form-group ">
                             <label for="stock">
